[workspace]
members = [
    "eap_base",
    "eap_derive",
]

[package]
name = "eap"
version = "0.0.1"
description = ""
repository = ""
categories = []
keywords = []

[dependencies]
eap_base = { path = "./eap_base" }
eap_derive = { path = "./eap_derive", optional = true}
proc-macro2 = "1.0.78"

[features]
default = []
derive = ["dep:eap_derive"]

[[example]]
name = "playground"
path = "examples/playground.rs"
required_features = ["derive"]

[lib]
bench = false
