[package]
name = "eap_base"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "eap_base"

[dependencies]
dotenvy = "0.15.7"

aws-sdk-secretsmanager = "1.14.0"
base64 = "0.21.7"

aws-sdk-ssm = "1.12.0"
serde = { version = "1.0.130"}
serde_json = { "version" = "1.0.68"}
thiserror = "1.0.56"
