[package]
name = "eap_derive"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "eap_derive"
proc-macro = true

[dependencies]
syn = {"version" = "2.0.48", "features" = ["full"]}
proc-macro2 = "1.0.78"

[features]
derive = []